--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,9 @@ button {
     border: none;
     cursor: pointer;
 }
+button:focus {
+	outline: 0;
+}
 
 a {
     text-decoration: none;
@@ -39,13 +42,14 @@ a {
 }
 
 header {
-    background-color: #D9D8DD;
+    background-color: #D4DADA;
     height: 70px;
 }
 
 h3 {
     text-transform: uppercase;
-    padding: 10px 0;
+    padding: 5px 0;
+    font: 400 20px 'Helvetica-Cond';
 }
 
 ul {
@@ -67,7 +71,7 @@ ul {
     height: 0;
     overflow: hidden;
     background-color: #E8E6E9;
-    box-shadow: 0 0 1px 1px rgba(170, 170, 170, 1);
+   
     transition: all .5s linear;
 
 }
@@ -81,7 +85,9 @@ ul {
     font-size: 18px;
     text-transform: capitalize;
 }
-
+.user{
+	display: none;
+}
 .icons {
     color: #fff;
     background-color: #4D5F6B;
@@ -89,8 +95,8 @@ ul {
     height: 30px;
     line-height: 30px;
     border-radius: 3px;
-    margin: 0 10px;
-    font-size: 20px;
+    margin: 0 1px;
+    font-size: 18px;
     display: none;
     text-align: center;
 }
@@ -98,7 +104,7 @@ ul {
 .logout {
     color: #fff;
     background-color: #4D5F6B;
-    font: 800 18px 'Helvetica';
+    font: 800 18px 'Helvetica-Cond';
     display: inline-block;
     padding: 5px 10px;
     border-radius: 3px;
@@ -149,6 +155,7 @@ main{
     color: #4D5F6B;
     text-transform: uppercase;
     padding: 30px 0 0;
+    font: 400 25px "Helvetica-Cond";
 }
 
 #cvr {
@@ -157,8 +164,8 @@ main{
 }
 
 .cvr_input {
-    width: 10px;
-    padding: 3px;
+    width: 19px;
+    text-align: center;
     background-color: transparent;
     border: none;
     font-size: 20px;
@@ -186,7 +193,7 @@ main{
 }
 
 #business_form {
-    width: 90%;
+    width: 100%;
     max-width: 800px;
     margin: 0 auto;
     text-align: left;
@@ -209,7 +216,7 @@ input.left {
     color: #4D5F6B;
     background-color: transparent;
     border: none;
-    border-radius: 5px;
+    border-radius: 3px;
     border-bottom: 0.5px solid rgba(255, 255, 255, 0.5);
     box-shadow: inset 0 2px 5px rgba(128, 128, 128, 0.5);
 }
@@ -218,24 +225,32 @@ input.left::-webkit-input-placeholder {
     /* Chrome/Opera/Safari */
     color: #4D5F6B;
     text-shadow: 2px 1px 2px #ffffff;
+    font: 400 18px "Helvetica";
+    text-align: center;
 }
 
 input.left::-moz-placeholder {
     /* Firefox 19+ */
     color: #4D5F6B;
     text-shadow: 2px 1px 2px #ffffff;
+    font: 400 18px "Helvetica";
+    text-align: center;
 }
 
 input.left:-ms-input-placeholder {
     /* IE 10+ */
     color: #4D5F6B;
     text-shadow: 2px 1px 2px #ffffff;
+    font: 400 18px "Helvetica";
+    text-align: center;
 }
 
 input.left:-moz-placeholder {
     /* Firefox 18- */
     color: #4D5F6B;
     text-shadow: 2px 1px 2px #ffffff;
+    font: 400 18px "Helvetica";
+    text-align: center;
 }
 
 input.left:first-child {
@@ -245,7 +260,17 @@ input.left:first-child {
 input[type="range"] {
     width: 100%;
 }
-
+.hunter{
+	float: left;
+}
+.farmer{
+	float: right;
+}
+.hunter,
+.farmer {
+	font: 600 12px "Helvetica";
+	text-shadow: 2px 2px 2px #fff;
+}
 .source ul>li,
 .solutions ul>li,
 .industry ul>li,
@@ -268,8 +293,14 @@ input[type="range"] {
     width: 100%;
     text-align: left;
     padding: 10px;
+    border-top: 2px solid rgba(128, 128, 128, 0.2);
+    border-bottom: 2px solid rgba(128, 128, 128, 0.2);
     font: 800 20px 'Helvetica';
-    color: #4D5F6B;
+    color: rgba(128, 128, 128, 0.5);
+    margin: 15px 0;
+}
+.accr_button_active{
+	color: #4D5F6B;
 }
 
 .sign_up {
@@ -283,6 +314,7 @@ input[type="range"] {
     background-color: #4D5F6B;
     color: #fff;
     border-radius: 5px;
+    font-weight: 600;
 }
 
 .sign_up>p {
@@ -299,6 +331,10 @@ input[type="range"] {
 .audience input[type="checkbox"]{
 	margin-left: 0;
 }
+.windup_que{
+	padding: 10px;
+		font-style: italic;
+}
 
 footer {
     background-color: #415764;
@@ -314,7 +350,11 @@ footer h3 {
     color: #fff;
     border-bottom: 2px solid #fff;
     text-transform: uppercase;
-    font: 800 20px "Helvetica-Cond";
+    font: 800 22px "Helvetica-Cond";
+}
+
+footer h4 {
+	font: 800 16px "Helvetica";
 }
 
 footer h4,
@@ -331,7 +371,7 @@ footer h4+p {
 
 footer p {
     color: #848C8F;
-    font: normal 16px "Helvetica";
+    font: 800 16px "Helvetica";
     line-height: 25px;
 }
 
@@ -341,7 +381,8 @@ footer p {
 }
 
 .activity_img img {
-    width: 100%;
+    width: 80%;
+    border: 2px solid #fff;
 }
 
 .thumbnail {
@@ -369,9 +410,19 @@ footer p {
     box-sizing: border-box;
     margin: 0 auto;
 }
-
+.contact_detail p {
+	display: table;
+	width: 100%;
+	padding-top: 10px;
+}
+.contact span:first-child{
+	  color: #fff;
+	   width: 25%;
+	   font: 600 16px "Helvetica";
+}
 .contact span {
-    color: #fff;
+    display: table-cell;
+
 }
 
 .contact p {
@@ -382,13 +433,16 @@ footer p {
 .contact_form {
     padding: 50px 0;
 }
+.contact_form h4 {
+	padding-top: 15px;
+}
 
 .contact_form input {
     width: 100%;
     padding: 10px;
     box-sizing: border-box;
     margin-bottom: 15px;
-    border-radius: 5px;
+    border-radius: 3px;
     border: 0;
     font: 500 20px "Helvetica";
     background-color: #DEDEDE;
@@ -407,11 +461,12 @@ footer p {
 }
 
 .send {
-    width: 150px;
-    padding: 10px;
+    width: 110px;
+    padding: 14px;
     margin-top: 10px;
     background-color: #455763;
     color: #fff;
+    font: 800 18px "Helvetica";
     border-radius: 5px;	
     border-top: 0.1px solid rgba(250, 250, 250, 0.1);
     border-left: 0.1px solid rgba(250, 250, 250, 0.1);
@@ -419,7 +474,6 @@ footer p {
     box-shadow: 0px 1.5px 1px #000;
 }
 input[type="checkbox"] {
-    display:inline-block;
     width:25px;
     height:25px;
     margin: 10px;
@@ -427,7 +481,33 @@ input[type="checkbox"] {
     cursor:pointer;
     border: none;
     background-color: #fff;
+    opacity: 0;
 }
+.label{
+	position: relative;
+	
+}
+.label:before{
+	content: '';
+	position: absolute;
+	background: url("../assets/unchecked.png") no-repeat;
+	background-size: 100% 100%;
+	width: 25px;
+    height: 25px;
+    top: -3px;
+    left: -37px;
+    cursor: pointer;
+    transition: 1s linear;
+}
+input[type="checkbox"]:checked + .label:before {
+	content: '';
+	background: url("../assets/checked.png") no-repeat;
+	background-size: 100% 100%;
+	position: absolute;
+	top: -3px;
+	left: -37px;
+}
+
 input[type=range] {
   -webkit-appearance: none;
   width: 100%; 
@@ -457,7 +537,7 @@ input[type=range]::-webkit-slider-thumb {
   box-shadow: 0 0 2px 2px rgba(130, 130, 128, 0.2);
 }
 input+label{
-	font: 400 14px "Helvetica";
+	font: 800 14px "Helvetica";
 	text-shadow:  0 2px #fff;
 }
 .flyout {
@@ -466,15 +546,15 @@ input+label{
 .flag {
     height: 25px;
     vertical-align: middle;
-    filter: grayscale(1);
 }
-.filter_remove{
-	filter: none;
+.filter_add{
+	filter: grayscale(1);
 }
 @media screen and (min-width: 768px) {
     .icons,
     .logout {
         display: inline-block;
+        vertical-align: middle;
     }
     .source ul>li {
         width: 24%;
@@ -494,11 +574,38 @@ input+label{
         vertical-align: top;
         font-size: 15px;
     }
+     .down_arrow{
+    	margin-right: 45%;
+    }
 }
 
 @media screen and (min-width: 1024px) {
     .mobile_view {
         display: none;
+    }
+    .user{
+    	height: 30px;
+    	display: inline-block; 	
+    	vertical-align: middle;
+    	margin-right: 10px;
+    }
+    .login_avatar{
+    	height: 100%;
+    	float: left;
+    }
+
+    .user_name{
+    	height: 100%;
+    	float: left;
+    	background-color: rgba(250, 250, 250, 0.5);
+    	border-radius: 0 5px 5px 0;
+    	padding: 5px 10px;
+    	font: 600 12px "Helvetica";
+    	line-height: 20px;
+    	text-shadow: 1px 1px 2px #fff;
+    	border: 1px solid grey;
+    	box-sizing: border-box;
+    	box-shadow: inset 0 0 1px 1px rgba(128, 128, 128, 0.2);
     }
     .nav_bar {
         display: inline-block;
@@ -511,7 +618,7 @@ input+label{
     background-color: #E8E6E9;
     border-radius: 10px;
     border: 1px solid #aaa;
-    box-shadow: 0 0 1px 1px rgba(170, 170, 170, 1);
+     box-shadow: 0 0 1px 1px rgba(170, 170, 170, 1);
 }
     .nav_bar ul>li {
     display: inline-block;
@@ -525,12 +632,12 @@ input+label{
     border-right: .5px solid rgba(170, 170, 170, 1);
 }
     #cvr{
-    	width:46.5%;
+    	width:46%;
     	margin: 10px;
     }
     .cvr_input{
-    	width: 15px;
-    	padding: 5px 8px;
+    	width: 35px;
+    	padding: 5px 0;
     }
     input.left{
     	width: 48%;
@@ -544,7 +651,8 @@ input+label{
     	width: 50%;
     	margin: 15px auto;
     	font-size: 22px;
-    	font-style: italic;
+    
+
     }
     .flyout{
     	background-color: #445662;
@@ -568,7 +676,7 @@ input+label{
     }
     .flyout_btn{
     	position: absolute;
-    	right: -48px;
+    	right: -47px;
     	top: 5px;
     	background-color: rgba(255, 255, 255, 1);
     	width: 45px;
@@ -632,7 +740,7 @@ input+label{
     .activity_img {
         display: table-cell;
         vertical-align: middle;
-        width: 40%;
+        width: 45%;
     }
     .activity_content {
         display: table-cell;
